--- a/src/app/empleado/empleado.component.html
+++ b/src/app/empleado/empleado.component.html
@@ -1,1 +1,8 @@
 <h1 style="color:blue">{{title}}</h1>
+
+<ul>
+    <li>{{trabajadores[1].nombre}}</li>
+    <li>{{trabajadores[1].edad}}</li>
+    <li>{{trabajadores[1].cargo}}</li>
+    <li>{{trabajadores[1].contratado}}</li>
+</ul>
