--- a/src/app/empleado/empleado.component.html
+++ b/src/app/empleado/empleado.component.html
@@ -5,11 +5,14 @@
 <h3>Selector de colores</h3>
 <button (click)="(logColorSeleccionado())">Mostrar LOG</button>
 <input type="text" [(ngModel)]= "color_seleccionado"/>
-<pre>
+<pre [class.bordeAzul]="color_seleccionado == 'blue'" [ngClass]="{  fondoAzul : color_seleccionado == 'blue', 
+                                                                    fondoVerde : color_seleccionado == 'green',
+                                                                    letraGrande : 1 == 1
+                                                                }">
     <strong>Color elegido:</strong>
     {{color_seleccionado}}
 </pre>
-<div [ngStyle]="{
+<div [style.border-radius]="color_seleccionado == 'black' ? '100px': '0px'"  [ngStyle]="{
     'background':color_seleccionado,
     'width': '200px',
     'height': '200px',
