--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+.bordeAzul {
+    border: 5px solid lightblue;
+}
+
+.fondoVerde {
+    background : lightgreen !important;
+}
+letraGrande{
+    font-size:40px;
+}
