06 Routing y navegación / 031 Menú de navegación

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,16 @@
     Welcome to {{ title }}!
   </h1>
   <hr>
-<app-empleado-tag></app-empleado-tag>
+<nav>
+  <a [routerLink]="['/home']">Home</a>
+  -
+  <a [routerLink]="['/fruta']">Fruta</a>
+  -
+  <a [routerLink]="['/empleado']">Empleado</a>
+  -
+  <a [routerLink]="['/contacto']">Contacto</a>
+</nav>
+
+
+  <router-outlet></router-outlet>
 
